fix alignment of contact text

--- a/css/about.css
+++ b/css/about.css
@@ -415,7 +415,7 @@ header {
   padding-inline: 1em;
 }
 .contact-box--content {
-  max-width: 40ch;
+  max-width: 41ch;
   padding: 1em 0.5em;
 }
 
