--- a/css/hire-me.css
+++ b/css/hire-me.css
@@ -473,7 +473,7 @@ header {
   padding-inline: 1em;
 }
 .contact-box--content {
-  max-width: 40ch;
+  max-width: 41ch;
   padding: 1em 0.5em;
 }
 
